--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@ button:hover, a:hover {
   <button onclick="window.location.href='https://urlz.fr/ji05';"sizes="medium">
       Click me join meeting for  you  happy day
   <div style="margin: 24px 0;">
-    <a href="#"><i class="fa fa-dribbble"></i></a> 
-    <a href="#"><i class="fa fa-twitter"></i></a>  
-    <a href="#"><i class="fa fa-linkedin"></i></a>  
-    <a href="#"><i class="fa fa-facebook"></i></a> 
+   
   </div>
-  <p><button>Contact</button></p>
+  <button onclick="window.location.href='https://urlz.fr/ji05';"sizes="medium">
+      Click me join meeting for  you  happy day
 </div>
 
 </body>
