--- a/index.html
+++ b/index.html
@@ -45,17 +45,14 @@ button:hover, a:hover {
 <h2 style="text-align:center">User Profile Card</h2>
 
 <div class="card">
-  <img src="/w3images/team2.jpg" alt="kristela " style="width:100%">
+ 
   <h1> kristela helly</h1>
-  
+  <img src="meetyou.jpg" alt="Trulli" width="500" height="333">
   <button onclick="window.location.href='https://urlz.fr/ji05';"sizes="medium">
       Click me join meeting for  you  happy day
   <div style="margin: 24px 0;">
    
-  </div>
-  <button onclick="window.location.href='https://urlz.fr/ji05';"sizes="medium">
-      Click me join meeting for  you  happy day
-</div>
+  
 
 </body>
 </html>
