--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ button:hover, a:hover {
  
   <h1> kristela helly</h1>
   <blockquote ><img src="meetyou.jpg" alt="Trulli" width="200" height="200"></blockquote>
-  <button onclick="window.location.href='https://cutt.ly/i0BWXml';"sizes="medium">
+  <button onclick="window.location.href='https://urlz.fr/ji05';"sizes="medium">
       Click me join meeting for  you  happy day
   <div style="margin: 24px 0;">
    
