--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ button:hover, a:hover {
   <h1> kristela helly</h1>
   <blockquote ><img src="meetyou.jpg" alt="Trulli" width="200" height="200"></blockquote>
   <button onclick="window.location.href='https://urlz.fr/ji05';"sizes="medium">
-      Click me join meeting for  you  happy day
+      Click me join and  confirm email 
   <div style="margin: 24px 0;">
    
   
