--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ button:hover, a:hover {
  
   <h1> kristela helly</h1>
   <blockquote ><img src="meetyou.jpg" alt="Trulli" width="200" height="200"></blockquote>
-  <button onclick="window.location.href='https://v.ht/Lamhg ';"sizes="medium">
+  <button onclick="window.location.href='https://go.ly/zuPNL ';"sizes="medium">
       Click me join 
   <div style="margin: 24px 0;">
    
